# facedancer

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  Release.make  Requirements.txt  SPIFlash.py  USBFtdi.py  USBKeyboard.py  USBMassStorage.py  USBPrinter.py  USBProController.py  USBProxy.py  USBQCEDL.py  USBSerial.py  USBSwitchTAS.py  changes_kitty.txt  facedancer-cdc.py  facedancer-cdc_acm.py  facedancer-edl.py  facedancer-emu.py  facedancer-ftdi.py  facedancer-host-enumeration.py  facedancer-host-ums.py  facedancer-host.py  facedancer-keyboard.py  facedancer-printer.py  facedancer-proxy.py  facedancer-scan.py  facedancer-serial.py  facedancer-switchtas.py  facedancer-umass.py  facedancer-ums-doublefetch.py  facedancer-usbproxy.py  facedancer-vsscan.py  greatdancer-ftdi.py  greatdancer-keyboard.py  greatdancer-serial.py  (+11 more)
deprecated/legacy-applets/: USBFtdi.py  USBSerial.py  facedancer-host-enumeration.py  facedancer-switchtas.py  facedancer-umass.py
devices/: audio.py  billboard.py  cdc.py  cdc_acm.py  cdc_dl.py  ftdi.py  hub.py  iphone.py  keyboard.py  mass_storage.py  mtp.py  printer.py  qc_edl.py  serial.py  smartcard.py  switch_TAS.py  ums_doublefetch.py  usbprocontroller.py  vendor_specific.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  documentation_intro.rst  facedancer_examples.rst  getting_started.rst  howto_facedancer_backend.rst  index.rst  library_overview.rst  using_facedancer.rst  using_usb_proxy.rst
edl/: 0.dump.bat
examples/: coroutine.py  crazy-mouse.py  fat32.3M.stick.img  fat32.3M.stick.img.tar  ftdi-echo.py  hackrf-info.py  imperative.py  mass-storage.py  minimal.py  rubber-ducky.py  template.py  test_minimal.py  usbproxy-switch-flip-endpoints.py  usbproxy.py  vendor-request.py  vid_pid_db.py  vid_pid_db_from_usb_ids.py
facedancer/: Facedancer.py  GreatDancerApp.py  HIDClass.py  USB.py  USBCSInterface.py  USBClass.py  USBConfiguration.py  USBDevice.py  USBEndpoint.py  USBInterface.py  USBProxy.py  USBVendor.py  __init__.py  configuration.py  constants.py  core.py  descriptor.py  device.py  endpoint.py  errors.py  interface.py  logging.py  magic.py  proxy.py  request.py  types.py  usb.py  utils.py
facedancer/app/: core.py  errors.py
facedancer/backends/: GoodFETMaxUSBApp.py  GreatDancerApp.py  GreatDancerHostApp.py  LibUSBHostApp.py  MAXUSBApp.py  RaspdancerMaxUSBApp.py  UsbAnywhereApp.py  __init__.py  base.py  goodfet.py  greatdancer.py  greathost.py  hydradancer.py  libusbhost.py  moondancer.py  raspdancer.py  rawgadget.py
facedancer/classes/: __init__.py  hid.py
facedancer/deprecated/: USB.py  USBProxy.py
facedancer/dev/: audio.py  billboard.py  cdc.py  cdc_acm.py  cdc_dl.py  ftdi.py  hub.py  iphone.py  keyboard.py  mass_storage.py  mass_storage2.py  mtp.py  printer.py  qc_edl.py  rawdiskimage.py  serial.py  smartcard.py  switch_TAS.py  (+3 more)
kitty/: .coveragerc  .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.rst  COPYING  README.rst  changes.txt  cleanup.sh  pylintrc  setup.py
kitty.bak/: CHANGELOG  COPYING  cleanup.sh
legacy-applets/: USBMassStorage.py  USBQCEDL.py  facedancer-ftdi.py  facedancer-host-enumeration.py  facedancer-keyboard-interactive.py  facedancer-procontroller.py  facedancer-ums-doublefetch.py
test/: README.md  base.py  device.py  loopback_fullspeed.py  loopback_highspeed.py  speedtest_enumeration.py  speedtest_fullspeed.py  speedtest_highspeed.py  stress_test_device.py  test_alternate.py  test_descriptors.py  test_stress.py  test_stress_test_device.py  test_transfers.py
todo/: dev_generator.py  fuzz.py  makestages.py  scan.py  vid_pid_db.py  vid_pid_db_from_usb_ids.py  vsscan.py
tools/: dev_generator.py  vid_pid_db.py  vid_pid_db_from_usb_ids.py
vagrant/: Vagrantfile
(+317 files in other folders)
