[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "facedancer"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
license = { text = "BSD" }
description = "Implement your own USB device in Python, supported by a hardware peripheral such as Cynthion or GreatFET."
urls = { Source = "https://github.com/greatscottgadgets/facedancer" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyusb", "pyserial", "prompt-toolkit",
]

[tool.setuptools-git-versioning]
enabled = true
